# qqcode

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  flake.nix  pyproject.toml  snapshot_report.html
.github/: CODEOWNERS  PYPI_QUICKSTART.md  PYPI_SETUP.md  QUICK_RELEASE.md  RELEASE_PROCESS.md
.github/workflows/: build-and-upload.yml  ci.yml  release-binaries.yml  release.yml
distribution/zed/: extension.toml
scripts/: install.sh
tests/: conftest.py  test_agent_auto_compact.py  test_agent_stats.py  test_cli_programmatic_preload.py  test_plan_mode_system_prompt.py
tests/acp/: test_acp.py  test_edit.py  test_initialize.py  test_new_session.py  test_set_mode.py
tests/backend/: test_backend.py
tests/backend/data/: zai.py
tests/onboarding/: test_ui_onboarding.py
tests/skills/: __init__.py  test_skill_manager.py  test_skill_tool.py
tests/snapshots/: base_snapshot_test_app.py  test_ui_snapshot_basic_conversation.py
tests/tools/: test_grep.py
tests/update_notifier/: test_ui_version_update_notification.py
vibe/: PROVIDER.md
vibe/acp/: acp_agent.py  entrypoint.py  utils.py
vibe/acp/tools/: session_update.py
vibe/acp/tools/builtins/: edit.py
vibe/cli/: commands.py  entrypoint.py  login.py
vibe/cli/textual_ui/: app.py  app.tcss
vibe/cli/textual_ui/handlers/: event_handler.py
vibe/cli/textual_ui/renderers/: tool_renderers.py
vibe/cli/textual_ui/widgets/: config_app.py  conversations_app.py  history_message.py  loading.py  messages.py  mode_indicator.py  plan_approval.py  tool_widgets.py  tools.py  welcome.py
vibe/cli/textual_ui/widgets/chat_input/: container.py
vibe/cli/update_notifier/: github_version_update_gateway.py
vibe/core/: __init__.py  agent.py  config.py  interaction_logger.py  output_formatters.py  programmatic.py  system_prompt.py  types.py  utils.py
vibe/core/llm/: format.py
vibe/core/llm/backend/: anthropic_sdk.py  factory.py  generic.py
vibe/core/oauth/: __init__.py  claude.py  qwen.py  token.py
vibe/core/prompts/: __init__.py  cli.md  plan_mode.md
vibe/core/skills/: __init__.py  manager.py
vibe/core/tools/: manager.py
vibe/core/tools/builtins/: bash.py  edit.py  grep.py  plan_mode.py  skill.py  todo.py
vibe/core/tools/builtins/prompts/: bash.md  edit.md  skill.md  write_file.md
vibe/setup/onboarding/: onboarding.tcss
vibe/setup/onboarding/screens/: api_key.py  welcome.py
vscode-extension/: .vscodeignore  README.md  esbuild.mjs  package-lock.json  package.json  test-spawn.js  tsconfig.json
vscode-extension/media/webview/: chat.js  index.html  styles.css
vscode-extension/src/: chatView.ts  extension.ts  qqcodeBackend.ts  statusBar.ts
vscode-extension/src/chatView/: ChatViewProvider.ts  index.ts  messageProcessor.ts
vscode-extension/src/chatView/protocol/: messages.ts
vscode-extension/src/fileIndexer/: FileIndexer.ts  PathCompleter.ts  fuzzyMatch.ts
vscode-extension/src/types/: events.ts
